<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logic16</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_text">Logic16</string>
    <string name="start_game">Start Game</string>
    <string name="show_highscore">Highscorelist</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_high_score">Highscores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="highscores">HIGHSCORES</string>


    <string name="game_over">Game Over!</string>
    <string name="game_over_smiley">:(</string>

    <string name="try_again">Try Again</string>
    <string name="back_to_start">Start Menu</string>

    <string name="won_game">Congratulations, you won the game!</string>

    <string name="your_score">actual score:</string>

    <string name="continue_playing">Keep going!</string>

    <string name="played_enough">You have enough?</string>



    <string name="add_highscore">Submit highscore</string>
    <string name="hi_back_to_start">or leave..</string>
    <string name="add_highscore_hint">add your highscore</string>

</resources>
