<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aje.logic16.app.GameOverActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blacker_overlay"
        android:gravity="center_vertical|center_horizontal"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:autoText="false"
            style="@style/game_over_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over_smiley"
            android:autoText="false"
            style="@style/game_over_string" />

        <LinearLayout
            style="ButtonBar"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            tools:ignore="UselessParent">


        <Button
            style="@style/ButtonBarButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:id="@+id/tryAgainButton"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="try_again"/>

        <Button
            style="@style/ButtonBarButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_to_start"
            android:id="@+id/backToMenu"
            android:onClick="to_start_page"
            android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>